RESOLVED FIXED227129
REGRESSION (r277067): Incorrect text color for default-button appearance
https://bugs.webkit.org/show_bug.cgi?id=227129
Summary REGRESSION (r277067): Incorrect text color for default-button appearance
Aditya Keerthi
Reported 2021-06-17 09:11:03 PDT
...
Attachments
Patch (6.41 KB, patch)
2021-06-17 09:12 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-06-17 09:11:17 PDT
Aditya Keerthi
Comment 2 2021-06-17 09:12:50 PDT
Aditya Keerthi
Comment 3 2021-06-17 11:50:40 PDT
Thanks for the review!
EWS
Comment 4 2021-06-17 11:57:10 PDT
Committed r279002 (238927@main): <https://commits.webkit.org/238927@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431677 [details].
Note You need to log in before you can comment on or make changes to this bug.